adicionado pasta de assets

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div>
-        <img src="Gamer.png" alt="foto do game">
+        <img src="./assets/Gamer.png" alt="foto do game">
 
         <h1>O que você encontra aqui</h1>
 
